k8s/aws/mts-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mts-backend
  labels:
    app: mts
    tier: mts-backend
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: http
  selector:
    app: mts
    tier: mts-backend
